Changing the language and changing the theme both at the same time

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,10 @@
 
 
 {
-    "txt": "Internationalizing Flutter apps"
+  "appName":"hello mahdi",
+
+  "home_txt": "home",
+  "profile_txt": " profile",
+  "setting_txt": "setting"
     
   }
