--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,5 +1,9 @@
 
 {
-    "txt": "بین المللی کردن برنامه های فلاتر "
+    "appName":"سلام مهدی",
+    
+    "home_txt": "خانه",
+    "profile_txt": "اطلاعات شخصی",
+    "setting_txt": "تنظیمات"
     
 }
