Bottom Appbar finished

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
 {
   "appName":"hello mahdi",
 
+  "massage_txt": "massages",
   "home_txt": "home",
   "profile_txt": " profile",
   "setting_txt": "setting"
