--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,11 +1,17 @@
 
 {
+    "@@locale": "",
+    "marquee":"بیت کوین در این آخر هفته به بالاترین حد خود می رسد و وال استریت نمی تواند کاری انجام دهد زیرا مبادلات آنها حتی باز نیست.    مهدی حدادی»",
+    "@marquee": {},
     "appName":"سلام مهدی",
-    
-
+    "@appName": {},
     "massage_txt": "پیام ها",
+    "@massage_txt": {},
     "home_txt": "خانه",
+    "@home_txt": {},
     "profile_txt": "اطلاعات شخصی",
-    "setting_txt": "تنظیمات"
+    "@profile_txt": {},
+    "setting_txt": "تنظیمات",
+    "@setting_txt": {}
     
 }
