--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,6 +1,7 @@
 
 {
-    "@@locale": "",
+    "sell_button":"فروش",
+    "buy_botton":"خرید",
     "marquee":"بیت کوین در این آخر هفته به بالاترین حد خود می رسد و وال استریت نمی تواند کاری انجام دهد زیرا مبادلات آنها حتی باز نیست.    مهدی حدادی»",
     "@marquee": {},
     "appName":"سلام مهدی",
